made some adjustments to the layout (Elevator top, middle and button container. No content visible yet. Screen clipping still and issue

--- a/src/stylesheets/elevatorstyle.scss
+++ b/src/stylesheets/elevatorstyle.scss
@@ -5,7 +5,7 @@
     z-index: 2;
     background: linear-gradient(45deg, rgb(117, 117, 117), rgb(214, 214, 214));
     border-bottom: solid 2px rgba(0, 0, 0, 0.267);
-    box-shadow: 0 0 10px 15px rgba(0, 0, 0, 0.466);
+    box-shadow: 0 0 15px 20px rgba(66, 66, 66, 0.466);
     .dial-container {
         position: relative;
         color: #fff;
@@ -152,7 +152,6 @@
                     background-image: -webkit-radial-gradient(  100%   0%,  8% 50%, hsla(0,0%,100%,.5) 0%, hsla(0,0%,100%,0) 100%),
                     -webkit-repeating-radial-gradient( 50% 50%, 100% 100%, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0) 1.2%, hsla(0,0%,100%,.2) 2.2%),
                     -webkit-radial-gradient( 50% 50%, 200% 50%, hsla(0,0%,90%,1) 5%, hsla(0,0%,85%,1) 30%, hsla(0,0%,60%,1) 100%);
-                    font-size: 22px;
                     transition: 0.05s;
                     cursor: pointer;
                 }
@@ -160,7 +159,6 @@
                 .button:active {
                     border: solid 2px rgba(255, 255, 0, 0.418);
                     box-shadow: inset 2px 2px 8px 0 rgba(0, 0, 0, 0.623);
-                    font-size: 20px;
                 }
             }
         }
@@ -224,9 +222,96 @@
     }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 360px) {
     .elevator-top {
-        
+        .dial-container {
+            position: relative;
+            color: #fff;
+            width: 400px;
+            .elevator-dial {
+                margin: 5px;
+                max-height: 100px;
+                transition: 0.2s;    
+            }
+            .dial-arrow {
+                position: absolute;
+                right: 173px;
+                top: 13%;
+                max-height: 80px;
+                z-index: 2;
+                transition: 1s;
+                transition-delay: 0.8s;
+            }
+            #floor-one {
+                transform: rotate(-88deg);
+                transform-origin: 50% 90%;
+            }
+            #floor-two {
+                transform: rotate(-39deg);
+                transform-origin: 50% 90%;
+            }
+            #floor-three {
+                transform: rotate(39deg);
+                transform-origin: 50% 90%;
+            }
+            #floor-four {
+                transform: rotate(88deg);
+                transform-origin: 50% 90%;
+            }
+            .floor-number {
+                font-size: 20px;
+                font-weight: bold;
+            }
+            #number-one {
+                position: absolute;
+                left: 26.8%;
+                top: 63%;
+                transform: rotate(-85deg);
+            }
+            #number-two {
+                position: absolute;
+                right: 61%;
+                top: 16.4%;
+                transform: rotate(-35deg);
+            }
+            #number-three {
+                position: absolute;
+                left: 55%;
+                top: 16.4%;
+                transform: rotate(35deg);
+            }
+            #number-four {
+                position: absolute;
+                right: 26.8%;
+                top: 65%;
+                transform: rotate(85deg);
+            }
+        }
+    }
+
+    .elevator-middle-container {
+        .elevator-panel { 
+            .button-container {
+                border: none;
+                .button-content {
+                    padding: 5px;
+                    .button-inner-content {
+                        display: block;
+                        text-align: center;
+                        width: fit-content;
+                        .button-text {
+                            font-size: 12px;
+                            width: 0px;
+                        }
+                        .button {
+                            width: 20px;
+                            height: 20px;
+                            margin-right: 0px;
+                        }
+                    }
+                }
+            }
+        } 
     }
 }
 
